# mm_radio_protocol

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  prj.conf
config/: app.conf.in  app.overlay  mcuboot.conf.in  pm_static.nomcuboot.yml  pm_static.yml
include/mesomat/: radio.h  radio_callbacks.h  radio_events.h  radio_operation.h  radio_payload.h  radio_scanner.h  radio_schedule.h  radio_slot_operation.h  radio_timer.h
src/: main.c  radio.c  radio.h  radio_events.c  radio_events.h  radio_operation.c  radio_payload.c  radio_payload.h  radio_scanner.c  radio_schedule.c  radio_slot_operation.c  radio_slot_operation.h  radio_timer.c  radio_timer.h  radio_timeslotting.h  regs.txt  regs_rx.txt
zephyr/: module.yml
